--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -28,5 +28,9 @@
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
             <SwapChainPanel x:Name="SwapChainCanvas" Width="500" Height="500"></SwapChainPanel>
         </StackPanel>
+
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button Content="Click Me" Click="MyButton_Click"/>
+        </StackPanel>
     </Grid>
 </Window>
