Add volume control slider to media player UI
Implemented volume control by adding a VolumeSlider to the UI and connecting it to the backend via a new SetVolume method in MEPlayer. The slider allows users to adjust playback volume in real time. Refactored playback controls layout to accommodate the new slider and ensure proper alignment.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -44,14 +44,19 @@
                 <Slider x:Name="TimeSlider" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
                 <TextBlock x:Name="DurationText" Text="0:00" VerticalAlignment="Center" Grid.Column="2" Margin="8,0,0,0"/>
             </Grid>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="PlayPause" Click="OnPlayPauseClick">
-                    <StackPanel Orientation="Horizontal" Spacing="8">
-                        <SymbolIcon Symbol="Play" x:Name="PlayPauseIcon"/>
-                    </StackPanel>
-                </Button>
-            </StackPanel>
-        </StackPanel>
 
+            <Grid VerticalAlignment="Bottom">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Button x:Name="PlayPause" Click="OnPlayPauseClick">
+                        <StackPanel Orientation="Horizontal" Spacing="8">
+                            <SymbolIcon Symbol="Play" x:Name="PlayPauseIcon"/>
+                        </StackPanel>
+                    </Button>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Padding="0,0,20,0">
+                    <Slider x:Name="VolumeSlider" Minimum="0" Maximum="100" Value="100" Width="100" ValueChanged="OnVolumeSliderChanged"/>
+                </StackPanel>
+            </Grid>
+        </StackPanel>
     </Grid>
 </Window>
