Rename volume slider handler for clarity and consistency

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -54,7 +54,7 @@
                     </Button>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Padding="0,0,20,0">
-                    <Slider x:Name="VolumeSlider" Minimum="0" Maximum="100" Value="100" Width="100" ValueChanged="OnVolumeSliderChanged"/>
+                    <Slider x:Name="VolumeSlider" Minimum="0" Maximum="100" Value="100" Width="100" ValueChanged="OnVolumeSliderValueChanged"/>
                 </StackPanel>
             </Grid>
         </StackPanel>
