Enhance volume UI with icon and value display
- Added a volume icon and current value TextBlock next to the VolumeSlider for improved user feedback.
- Disabled thumb tooltips on both TimeSlider and VolumeSlider.
- Updated OnVolumeSliderValueChanged to reflect the current volume in the UI.
- Adjusted layout and margins for better alignment.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -41,7 +41,7 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock x:Name="CurrentTimeText" Text="0:00" VerticalAlignment="Center" Grid.Column="0" Margin="0,0,8,0"/>
-                <Slider x:Name="TimeSlider" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
+                <Slider x:Name="TimeSlider" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" IsThumbToolTipEnabled="False"/>
                 <TextBlock x:Name="DurationText" Text="0:00" VerticalAlignment="Center" Grid.Column="2" Margin="8,0,0,0"/>
             </Grid>
 
@@ -59,8 +59,10 @@
                         </StackPanel>
                     </Button>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Padding="0,0,20,0">
-                    <Slider x:Name="VolumeSlider" Minimum="0" Maximum="100" Value="100" Width="100" ValueChanged="OnVolumeSliderValueChanged"/>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Padding="0,0,0,0">
+                    <SymbolIcon Symbol="Volume" VerticalAlignment="Center" Margin="5"/>
+                    <Slider x:Name="VolumeSlider" Minimum="0" Maximum="100" Value="100" Width="100" ValueChanged="OnVolumeSliderValueChanged" IsThumbToolTipEnabled="False"/>
+                    <TextBlock x:Name="VolumeText" Text="100" Width="20" Margin="5,0" VerticalAlignment="Center"/>
                 </StackPanel>
             </Grid>
         </StackPanel>
