--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -59,8 +59,18 @@
                     </Grid>
                     <ListView x:Name="PlaylistView" Grid.Row="1" SelectionChanged="OnPlaylistSelectionChanged">
                         <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding}" TextTrimming="CharacterEllipsis"/>
+                            <DataTemplate x:DataType="x:String">
+                                <Grid Padding="0,8">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="Auto" />
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBlock Grid.Column="0" Text="{x:Bind}" VerticalAlignment="Center" TextTrimming="CharacterEllipsis" Margin="0,0,12,0"/>
+                                    <Button Grid.Column="1" ToolTipService.ToolTip="Remove from playlist" Click="OnRemoveFromPlaylistClick" Tag="{x:Bind}">
+                                        <SymbolIcon Symbol="Clear" />
+                                    </Button>
+                                </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
